<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CollageActivity">
    <SeekBar
        android:id="@+id/brightness_seekbar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="0"
        android:layout_marginTop="100dp" />
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/mywork_item_1">
        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/collage"
            android:textColor="#ff333333"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/iv_load"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/load"
            android:gravity="center"
            android:background="@drawable/collage_load"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_changebackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top">
        <ImageView
            android:id="@+id/iv_picture"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="500dp"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_pic_1"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/ll_pic_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/ll_adjust"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/iv_adjust"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/unadjust"/>
            <TextView
                android:id="@+id/tv_adjust"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/adjust"
                android:textColor="@color/unchange_grave"/>
        </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_layout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/unlayout"/>
        <TextView
            android:id="@+id/tv_layout"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout"
            android:textColor="@color/unchange_grave"
            android:textSize="12dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/unbackground"/>
        <TextView
            android:id="@+id/tv_background"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background"
            android:textColor="@color/unchange_grave"
            android:textSize="12dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_space"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_space"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/unspace"/>
        <TextView
            android:id="@+id/tv_space"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:textColor="@color/unchange_grave"
            android:textSize="12dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_ratio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_ratio"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/unratio"/>
        <TextView
            android:id="@+id/tv_ratio"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ratio"
            android:textColor="@color/unchange_grave"
            android:textSize="12dp" />
    </LinearLayout>

    </LinearLayout>


</RelativeLayout>