<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:id="@+id/ll_collage"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/first_item_1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/collage"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/collage"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_camera"
            android:layout_marginLeft="15dp"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@drawable/first_item_1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/camera_icon"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/camera"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_savedarea"
            android:layout_marginLeft="15dp"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:background="@drawable/first_item_1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/savedarea"
                android:layout_marginTop="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/saved_area"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>